Add tests for city by jump query